--- a/pagina/index.html
+++ b/pagina/index.html
@@ -11,7 +11,7 @@
 <script defer src="java/eventos.js"> </script>
 <!-- <script defer src="java/data.json"> </script> -->
 <!---<script defer src="java/cscript.js"> </script>-->
-<!---<script defer src="java/json.js"> </script>/-->
+<script defer src="java/car.js"> </script>
 <script defer src="java/geolocations.js"> </script>
 <script defer src="java/jquery.js"> </script>
 <script defer src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.3.1/web-animations.min.js"></script>
@@ -55,30 +55,31 @@
 
 	<article class="txt1" id="col">
 		<h2>GET YOUR RAVANGE BODY IN A MONTH</h2>
-		<p>Check out our plans to get more information on how this works.</p>
+		<p class= "centert">Check out our plans to get more information on how this works.</p>
 		
 		<br>
-		<div id="carouselExampleIndicators" class="carousel slide car" data-ride="carousel">
+		<div class= "centerc">
+		<div id="carouselExampleIndicators" class="carousel slide car center" data-ride="carousel">
 
-			<div class="carousel-inner">
-			  <div class="carousel-item active">
-				<img src="pic/yoga.jpg" class="d-block w-70" alt=".">
+			<div class="carousel-inner centerd">
+			  <div class="carousel-item active piccar">
+				<img src="pic/yoga.jpg" class="d-block" alt=".">
 			  </div>
-			  <div class="carousel-item">
-				<img src="pic/medita.jpg" class="d-block w-70" alt=".">
+			  <div class="carousel-item piccar">
+				<img src="pic/medita.jpg" class="d-block" alt=".">
 			  </div>
-			  <div class="carousel-item">
-				<img src="pic/exercise.jpg" class="d-block w-70 diome" alt=".">
+			  <div class="carousel-item piccar">
+				<img src="pic/exercise.jpg" class="d-block" alt=".">
 			  </div>
-			  <div class="carousel-item">
-				<img src="pic/meditation.jpg" class="d-block w-70 diome" alt=".">
+			  <div class="carousel-item piccar">
+				<img src="pic/meditation.jpg" class="d-block" alt=".">
 			  </div>
-			  <div class="carousel-item">
-				<img src="pic/yoga ex.jpg" class="d-block w-70 diome" alt=".">
+			  <div class="carousel-item piccar">
+				<img src="pic/yoga ex.jpg" class="d-block" alt=".">
 			  </div>
 			  <div class="carousel-caption d-none d-md-block">
-				<h5>Yoga</h5>
-				<p>info</p>
+				<h5 id="type" function = "data()"></h5>
+				<p id="inf" function = "data()"></p>
 			</div>
 			<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
 			  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -89,9 +90,9 @@
 			  <span class="sr-only">Next</span>
 			</a>
 		  </div>
-
-		<p>Subscribe for work out tips, food suggestions and more!</p>
-		<p>Let's work on getting our confidence back after a break up together. You will see results in a month if you follow my strict work out and diet</p>
+</div>
+		<p class= "centert">Subscribe for work out tips, food suggestions and more!</p>
+		<p class= "centert">Let's work on getting our confidence back after a break up together. You will see results in a month if you follow my strict work out and diet</p>
 
 </article>
 
